Fix gap on homepage

--- a/_assets/sass/pages/_home.sass
+++ b/_assets/sass/pages/_home.sass
@@ -29,3 +29,7 @@
     .button
       background: $color-yellow
       color: $color-plum
+
+.image
+  &--full-bleed
+    display: block
